<resources>
    <string name="app_name">Tushughuli-android</string>
    <string name="t">T</string>
    <string name="username">Username</string>
    <string name="sign_up_to_get_started">Sign Up To Get Started</string>
    <string name="enter_your_name">Username</string>
    <string name="email">Email</string>
    <string name="enter_your_email">username@email.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">*****</string>
    <string name="enter_your_password">*****</string>
    <string name="sign_up">SIGN UP</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">user@email.com</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="private_password">*****</string>
    <string name="welcome_to_app">Welcome to Tushughuli</string>
    <string name="register_new_account">Register new account</string>
    <string name="confirm_password_two">Confirm Password</string>
    <string name="login_to_account">LOGIN TO ACCOUNT</string>
    <string name="add_new_task">ADD NEW TASK</string>
    <string name="write_your_new_task">Write your new task</string>
    <string name="close">Close</string>
    <string name="task_name">Task description</string>
    <string name="today">Today</string>
    <string name="flag_icon">flag icon</string>
    <string name="reminder_icon">reminder icon</string>
    <string name="add">ADD</string>
    <string name="created">Created</string>
    <string name="in_progress">In Progress</string>
    <string name="logout">Logout</string>
    <string name="logout_cap">LOGOUT</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="edit_this_task">Edit this task?</string>
    <string name="_12_08_2022">12/08/2022</string>
    <string name="delete">Delete</string>
    <string name="save">SAVE</string>
    <string name="edit_task">EDIT TASK</string>
    <string name="task_title">Task title</string>
    <string name="due_date">Due Date</string>
    <string name="unable_to_find_user_id">Unable to find user id</string>
    <string name="task_deleted">Task deleted successfully</string>
    <string name="error_task_title">Please enter a Task Title</string>
    <string name="error_task_description">Please enter a Task Description</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="channelName">Reminders</string>
    <string name="channelDescription">Reminders due</string>
</resources>