<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/design_bottom_sheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <!-- Bottom sheet contents. -->

    <TextView
        android:id="@+id/tv_start_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/noto_sans"
        android:padding="5dp"
        android:text="@string/write_your_new_task"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/ll_greybackground"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/noto_sans"
        android:padding="5dp"
        android:text="@string/close"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/ll_greybackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_greybackground"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/grey_rectangle"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttonAddTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextTaskName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="start"
            android:hint="@string/task_name"
            android:autofillHints="Task name"
            android:padding="10dp"
            android:textSize="14sp"
            android:ems="10"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="234dp" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_datePicker"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/today"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/buttonAddTask"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toEndOf="@id/iv_flag"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_reminder"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/reminder_icon"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:src="@drawable/baseline_access_time_black_24dp"
        app:layout_constraintBottom_toTopOf="@id/buttonAddTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toEndOf="@id/iv_flag" />

    <ImageView
        android:id="@+id/iv_flag"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/flag_icon"
        android:padding="5dp"
        android:src="@drawable/baseline_outlined_flag_black_24dp"
        app:layout_constraintBottom_toTopOf="@id/buttonAddTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddTask"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="240dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        style="@style/buttonTheme"
        android:fontFamily="@font/noto_sans"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>