<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tvEditTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/noto_sans"
        android:padding="5dp"
        android:text="@string/edit_this_task"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/ll_editTask"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCloseEditTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/noto_sans"
        android:padding="5dp"
        android:text="@string/close"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/ll_editTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_editTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:background="@drawable/grey_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/buttonEditTask"
        android:layout_marginBottom="280dp">

        <EditText
            android:id="@+id/editTextEditTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="Task name"
            tools:ignore="LabelFor"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="234dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_greybackground"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/grey_rectangle"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttonEditTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextEditTask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="Task name"
            android:background="@android:color/transparent"
            tools:ignore="LabelFor"
            android:ems="10"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="234dp" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvEditDatePicker"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="60dp"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/_12_08_2022"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/buttonEditTask"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toEndOf="@id/ivEditFlag"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivEditReminder"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/reminder_icon"
        android:padding="5dp"
        android:src="@drawable/baseline_access_time_black_24dp"
        app:layout_constraintBottom_toTopOf="@id/buttonEditTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toEndOf="@id/ivEditFlag" />

    <ImageView
        android:id="@+id/ivEditFlag"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/flag_icon"
        android:padding="5dp"
        android:src="@drawable/baseline_outlined_flag_black_24dp"
        app:layout_constraintBottom_toTopOf="@id/buttonEditTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDeleteTask"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/delete"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@id/buttonEditTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/pbEditBottomSheet"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/buttonEditTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEditTask"
        style="@style/buttonTheme"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="310dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/noto_sans"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>